--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 cse557_option1_microblogs.json
 cse_557_option1/*
+cse_557_option1_subset_ids.pkl copy
+cse557_option1_microblogs.pkl copy
+cse557_option1_sick_microblogs.json
+cse557_option1_sick_microblogs_sampled.json
